# Tetrank

./: .gitignore  CMakeLists.txt  README.md
res/: resource_manager.cpp  resource_manager.hpp
res/shaders/: fragment_shader.txt  vertex_shader.txt
src/: main.cpp
src/Event_system/: event_system.cpp  event_system.hpp
src/Game/: bullet.cpp  bullet.hpp  event_system.hpp  game_manager.cpp  game_manager.hpp  game_objects.cpp  game_objects.hpp  player.cpp  player.hpp  settings.cpp  settings.hpp  text.cpp  text.hpp  wall.cpp
src/Render/: model.cpp  model.hpp  render.hpp  shader_program.cpp  shader_program.hpp  update_screen.cpp  vertex_buffers.hpp  vo.cpp  vo.hpp
src/Resorce_manager/: resource_manager.cpp  resource_manager.hpp
src/Settings/: settings.cpp  settings.hpp
